<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistroPaciente">

        <TextView
            android:id="@+id/text_message4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/text_message4"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/especialidad1"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/yellow"
            android:text="@string/especialidad1"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_message4" />

        <TextView
            android:id="@+id/profesional1"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especialidad3" />

        <TextView
            android:id="@+id/profesional5"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional2" />

        <TextView
            android:id="@+id/profesional2"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especialidad1" />

        <TextView
            android:id="@+id/profesional4"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional1" />

        <TextView
            android:id="@+id/profesional7"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especialidad" />

        <TextView
            android:id="@+id/profesional8"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional7" />

        <TextView
            android:id="@+id/especialidad2"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:text="@string/especialidad2"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional5" />

        <TextView
            android:id="@+id/profesional3"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/especialidad2" />

        <TextView
            android:id="@+id/profesional6"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@string/profesionales6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional3" />

        <TextView
            android:id="@+id/especialidad3"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:text="@string/especialidad3"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional6" />

        <TextView
            android:id="@+id/especialidad"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:text="@string/especialidad4"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profesional4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>