<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="21dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/connect_salud_logo"
        android:contentDescription="@string/img_logo"
        app:layout_constraintBottom_toTopOf="@+id/text_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/connect_salud_logo" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:text="@string/text_welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_message1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_message1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="input_email"
        android:ems="10"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/input_pass1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message1"
        app:layout_constraintVertical_bias="0.981" />

    <EditText
        android:id="@+id/input_pass1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="input_pass"
        android:ems="10"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        app:layout_constraintVertical_bias="0.981" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/button_login"
        android:onClick="launchHome"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_pass1" />

    <TextView
        android:id="@+id/button_passforgot"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:autofillHints="button_passforgot"
        android:text="@string/button_passforgot"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/button_register"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/button_register"
        android:onClick="launchRegister"
        android:text="@string/button_register"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Visita nuestra página web"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="launchWebsite" />

</androidx.constraintlayout.widget.ConstraintLayout>