<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/button_perfil"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:hint="@string/button_perfil"
        android:onClick="launchProfile"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_perfil" />

    <Button
        android:id="@+id/button_turnos"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:hint="@string/button_turnos"
        android:onClick="launchTurnos"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_perfil"
        tools:text="@string/button_turnos" />

    <Button
        android:id="@+id/button_reserve"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:hint="@string/button_reserve"
        android:onClick="launchReserve"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_turnos"
        tools:text="@string/button_reserve" />

    <!-- Button for launching ContactoActivity -->

    <Button
        android:id="@+id/button_profesionales"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:hint="@string/button_profesionales"
        android:onClick="launchProfesionales"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reserve"
        tools:text="@string/button_profesionales" />

    <Button
        android:id="@+id/button_contacto"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/yellow"
        android:onClick="launchContacto"
        android:text="Contacto"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_profesionales" />

    <Button
        android:id="@+id/button_cerrar_sesion"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/gray"
        android:hint="@string/button_cerrar_sesion"
        android:onClick="launchCerrarSesion"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_profesionales"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Cerrar Sesion" />

</androidx.constraintlayout.widget.ConstraintLayout>